--- a/changelog/breaking-changes-and-migration/breaking-changes.mdx
+++ b/changelog/breaking-changes-and-migration/breaking-changes.mdx
@@ -1,123 +1,116 @@
 ---
 title: "Breaking Changes"
-description: "Explains significant backward-incompatible modifications across versions, such as required C++ standards changes or changes in supported platforms. Clearly flags what may require user intervention."
+description: "Highlights any release that introduces changes incompatible with previous versions. For each breaking change, explains the impact, affected features, and high-level remediation steps."
 ---
 
 # Breaking Changes
 
-The "Breaking Changes" page highlights significant backward-incompatible modifications that affect users upgrading between GoogleTest and GoogleMock versions. These breaking changes commonly involve requirements on C++ standards, build or platform compatibility, and runtime behavior changes that may necessitate user intervention.
+This document details the significant breaking changes introduced in various releases of GoogleTest. It is designed to help users quickly identify any updates that are incompatible with previous versions, understand their impact, and follow high-level remediation steps to upgrade smoothly.
 
 ---
 
-## Introduction
+## What Are Breaking Changes?
 
-When upgrading to newer versions of GoogleTest and GoogleMock, users may encounter changes that break backward compatibility. This page summarizes such changes, helping you identify what might need adjustments in your code or build environment.
-
-Being aware of breaking changes is critical to smoothly migrate and maintain your test suites without unexpected compilation or runtime failures.
+Breaking changes are modifications to GoogleTest's interfaces, behaviors, or internal mechanisms that may cause existing test code to fail to compile, behave differently, or produce different results without modification. These changes require users to adapt their code or configuration when upgrading.
 
 ---
 
-## Notable Breaking Changes in Recent Releases
+## How to Use This Document
 
-### Mandatory C++17 Standard Requirement
-
-Starting with version **1.17.0**, GoogleTest and GoogleMock require a compiler that fully supports the C++17 standard. This is a fundamental shift from prior versions, which allowed older C++ standards.
-
-**Implications:**
-
-- Your build setup must specify `-std=c++17` (or equivalent) in your compiler flags.
-- Older compilers or build pipelines that do not support C++17 will fail to compile GoogleTest/GoogleMock.
-- Review your compiler versions and update if necessary.
-
-### Merging GoogleTest and GoogleMock
-
-The frameworks have been consolidated into a single repository and release cycle. This merging results in:
-
-- Unified header inclusion; for example, including `gmock/gmock.h` also includes GoogleTest.
-- Some build system adjustments may be required to accommodate merged sources.
-
-### Platform and Compiler Support Changes
-
-- Some platforms and compilers might no longer be supported due to the new standard dependency.
-- Threading support assumptions and platform detection macros have been updated.
-
-Check your environment against the [Supported Platforms and Compilers documentation](https://google.github.io/googletest/faq/getting-started-faq/supported-platforms-compilers.html).
-
-### API and Macro Behavior Changes
-
-Occasionally, modifications to macros like `MOCK_METHOD` or new qualifiers in mocking APIs introduce changes that could break existing mock definitions, especially with complex or overloaded methods.
-
-Examples:
-
-- The `MOCK_METHOD` macro enforces stricter parsing rules around argument types containing commas, requiring parentheses or type aliases.
-- Changes to default expectation evaluation and match precedence may affect which mock call is matched first.
-
-Consult the [Mock Object Definition](../api-reference/gmock-mocking-apis/mock-object-definition.html) page for updated macro usage.
-
-### Behavior on Unexpected and Uninteresting Calls
-
-Default behaviors around unexpected mock calls and warnings for uninteresting calls have been refined. Pay attention to:
-
-- The difference between `NiceMock`, `NaggyMock`, and `StrictMock` regarding warnings/errors on uninteresting calls.
-- Changes in verbosity defaults that can affect test logging.
-
-See the [Mock Strictness Policies](../api-reference/gmock-mocking-apis/strictness-policies.html) for behavior details.
+- **Identify Version Differences:** Review the breaking changes listed for the version you are upgrading to.
+- **Understand Impact:** Examine the description to assess whether your code relies on affected features.
+- **Apply Remediation:** Follow the provided migration or workaround guidance to update your tests.
+- **Consult Further:** Refer to linked migration guides or detailed release notes for in-depth instructions.
 
 ---
 
-## Preparing for Migration
+## Breaking Changes by Release
 
-To smooth your upgrade path:
+### Release 1.17.0
 
-1. **Verify C++ Standard Compatibility:**
-   Ensure your build systems use C++17 or newer.
+- **Minimum C++ Version Requirement**
+  - **Change:** GoogleTest 1.17.0 requires a minimum compiler support for C++17.
+  - **Impact:** Test projects targeting older C++ standards (e.g., C++11 or C++14) will fail to compile.
+  - **Remediation:** Upgrade your compiler and project settings to target at least C++17.
+  - **Reference:** For supported compilers and platforms, see [Supported Platforms](docs/platforms.md).
 
-2. **Update Mock Definitions:**
-   - Fix argument type parentheses or aliases in `MOCK_METHOD` as needed.
-   - Review usages of mocking macros for compatibility.
+- **Internal Port Header API Changes**
+  - **Change:** The internal header `gtest-port.h` introduced or adjusted macros and features to detect platform capabilities more rigorously.
+  - **Impact:** Code that previously tinkered with porting macros or build scripts defining these macros might need updates.
+  - **Remediation:** Review any customizations of `GTEST_HAS_*` macros and ensure they comply with new definitions.
 
-3. **Adjust Platform-Specific Settings:**
-   Confirm your platform and compiler are supported as listed in the platform documentation.
-
-4. **Handle Strictness and Verbosity Changes:**
-   - Adjust your mock strictness wrapper classes to control warnings.
-   - Use flags like `--gmock_verbose` to fine-tune logging.
-
-5. **Test Thoroughly:**
-   Run your test suites with increased verbosity to catch unexpected behavior or failures early.
-
----
-
-## Common User Actions Required
-
-- **Recompile with C++17:** Update your compiler flags and possibly toolchain.
-- **Check and Modify Mock Classes:** Adapt `MOCK_METHOD` usages per new syntax rules.
-- **Review Test Logs:** Identify unexpected mock call messages that may indicate stricter behavior.
-- **Explore New Features/Flags:** Utilize new API abilities and flags to adjust testing behavior.
+- **Death Test Style Default Change**
+  - **Change:** The recommended default for death test style is now "threadsafe" instead of the legacy "fast".
+  - **Impact:** Death tests may run slower but are more stable on multithreaded environments.
+  - **Remediation:** Consider explicitly setting `--gtest_death_test_style` flag if your tests rely on the old behavior.
+  - **Reference:** See [Death Tests Guide](guides/advanced-testing-patterns/death-test-guide.mdx) for configuration details.
 
 ---
 
-## Troubleshooting and Support
+## General Guidance on Breaking Changes
 
-If you run into problems post-update:
+1. **Strict Naming Rules for Tests:**
+   - GoogleTest enforces stricter naming rules for test suites and test names to avoid naming collisions and reserved identifier violations.
+   - Avoid underscores (`_`) in test suite and test names as previously warned in the FAQ to prevent future conflicts.
 
-- Review error messages carefully for references to macro misuse or standard support.
-- Refer to the [Legacy gMock FAQ](../faq/troubleshooting-advanced/mocking-edge-cases.html) for common issues around mock definitions.
-- Use `--gmock_verbose=info` flag when running tests to get detailed diagnostics.
-- Seek help on GoogleTest community forums or GitHub issues with detailed reproduction steps.
+2. **Assertion Behavior Refinements:**
+   - Adjustments have been made to assertion macros to better handle pointer comparisons and type safety.
+   - Prefer using `nullptr` over `NULL` in assertions for improved correctness.
+
+3. **Thread Safety Enhancements:**
+   - Increased thread-safety measures, especially around death tests and synchronization primitives.
+   - If you encounter flaky or hanging death tests, review the new thread-safety defaults and adjust test isolation accordingly.
+
+4. **Deprecations & Removals:**
+   - Some legacy macros or internal API usages may have been deprecated or removed.
+   - Check the linker errors or compilation warnings and replace deprecated usage with recommended alternatives.
+
+---
+
+## Migration Steps for Common Breaking Changes
+
+The following provides a high-level approach to migrating your code for known breaking changes:
+
+### 1. Upgrading to C++17
+
+- Modify your build system config (CMake/Bazel/Makefile) to specify `-std=c++17` or equivalent.
+- Ensure all dependencies and libraries used by your tests are compatible with C++17.
+
+### 2. Adjusting for Death Test Style Changes
+
+- Identify all death tests (`EXPECT_DEATH`, `ASSERT_DEATH`, `EXPECT_EXIT`, etc.).
+- Test with the "threadsafe" style by running your test binary with:
+  ```shell
+  ./your_test_binary --gtest_death_test_style=threadsafe
+  ```
+- If performance reverts or hangs occur, optionally force the legacy style by:
+  ```shell
+  ./your_test_binary --gtest_death_test_style=fast
+  ```
+- Update test fixtures to minimize thread creation outside of death test scopes.
+
+### 3. Compliance with Test Name Restrictions
+
+- Ensure test suite and test names do not start or end with underscores.
+- Avoid multiple underscores causing ambiguous generated test class names.
+- Rename tests as necessary prior to upgrading.
+- Consult the FAQ on [Naming Restrictions](docs/faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore).
+
+### 4. Remove or Update Deprecated Macros
+
+- Replace any deprecated assertion macros with their modern equivalents.
+- Remove any direct usage of internal-only macros or APIs (those ending with `_` or in internal namespaces).
 
 ---
 
 ## Additional Resources
 
-- [Installation and Supported Platforms](../getting-started/setup-basics/installation-platforms.md)
-- [Mock Object Definition](../api-reference/gmock-mocking-apis/mock-object-definition.md)
-- [Mocking Best Practices](../guides/real-world-patterns/mocking-best-practices.md)
-- [Migrating to Newer Versions](../changelog/breaking-changes-and-migration/migration-faq.md)
-- [gMock Cookbook](../docs/gmock_cook_book.md)
+- [Detailed Release Notes](http://github.com/google/googletest/releases) - for in-depth information on changes per release.
+- [Migration Guides](changelog/breaking-changes-and-migration/migration-guides) - specific steps for upgrading.
+- [FAQ](docs/faq.md) - for answers to common upgrade and usage questions.
+- [Death Tests Guide](guides/advanced-testing-patterns/death-test-guide.mdx) - for managing death test related changes.
+- [Supported Platforms](docs/platforms.md) - to verify environment compatibility.
 
 ---
 
-Understanding these breaking changes ensures successful upgrades and harnessing new capabilities offered by the latest GoogleTest and GoogleMock releases.
-
-For a comprehensive history of changes including improvements and deprecations, visit the [Full Version History](../changelog/version-history-and-highlights/full-version-history.md).
+If you experience unexpected test failures or compilation errors after upgrading, carefully consult this document and the above resources. The GoogleTest community encourages reporting issues or questions on GitHub Discussions or Issues for further assistance.
